--- a/pages/toys.html
+++ b/pages/toys.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="img/fv.png" type="image/x-icon">
+  <meta name="keywords" content="petshop, petshop franco, caballito, buenos aires, argentina, mascotas, perros, gatos, medicamentos, juguetes">
+  <meta name="description" content="Petshop Franco, tienda de mascotas, cuidado y bienestar animal">
+  <link rel="shortcut icon" href="../img/fv.png" type="image/x-icon">
   <title>Juguetes</title>
   <link rel="stylesheet" href="../style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -83,7 +85,7 @@
       <div class="offcanvas-body">
         <div class="row">
           <div class="column" v-if="carrito.length > 0" v-for="item in carrito">
-            <div class="card" style="width: 18rem;">
+            <div class="card">
               <img :src="item.imagen" class="card-img-top" :alt="item.nombre">
               <div class="card-body">
                 <h5 class="card-title">{{item.nombre}}</h5>
@@ -138,8 +140,8 @@
           <i class="fa-solid fa-truck service__item__icon fa-3x"></i>
           <div>
             <h3>ENVIOS SIN CARGO</h3>
-            <p>Envíos sin cargo con nuestro propio sistema de distribución <a href="./zonas.html" class="a-linked">
-                chequea </a> las zonas de cobertura.</p>
+            <p class="textPService">Envíos sin cargo con nuestro propio sistema de distribución 
+              chequea  las <a href="./zonas.html" class="mails message"> zonas de cobertura. </a></p>
           </div>
         </div>
 
@@ -147,7 +149,7 @@
           <i class="fa-solid fa-credit-card service__item__icon  fa-3x"></i>
           <div>
             <h3>PAGOS</h3>
-            <p>En efectivo con un 10% de descuento o con tarjetas de crédito/débito,mercadopago</p>
+            <p class="textPService">En efectivo con un 10% de descuento o con tarjetas de crédito/débito,mercadopago</p>
           </div>
         </div>
 
@@ -156,7 +158,7 @@
           <i class="fa-solid fa-clipboard-check service__item__icon fa-3x"></i>
           <div>
             <h3>PRODUCTOS SELLADOS</h3>
-            <p>100% originales, sellados de fábrica</p>
+            <p class="textPService">100% originales, sellados de fábrica</p>
           </div>
         </div>
 
@@ -164,7 +166,7 @@
           <i class="fa-brands fa-whatsapp-square service__item__icon fa-3x"></i>
           <div>
             <h3>CENTRO DE ATENCIÓN</h3>
-            <p>Atención directa por Whatsapp para mayoristas y minoristas</p>
+            <p class="textPService">Atención directa por Whatsapp para mayoristas y minoristas</p>
           </div>
         </div>
 
