--- a/pages/zonas.html
+++ b/pages/zonas.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="petshop, petshop franco, caballito, buenos aires, argentina, mascotas, perros, gatos, medicamentos, juguetes">
+    <meta name="description" content="Petshop Franco, tienda de mascotas, cuidado y bienestar animal">
+    <link rel="shortcut icon" href="../img/fv.png" type="image/x-icon">
     <title>Zonas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
@@ -43,11 +46,11 @@
                 <a class="nav-link classA" href="zonas.html">Envios</a>
               </li>
             </ul>
-            <form class="d-flex">
+            <!-- <form class="d-flex">
               <input class="form-control me-2 input1" type="search" placeholder="Escriba aqui......" aria-label="Search">
               <button class="btn  boton" type="submit">Buscar</button>
-              <!-- {{buscar}}  -->
-            </form>
+             
+            </form> -->
           </div>
         </div>
     </nav> 
